--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
 </body>
 <script type="text/javascript" src="js/app.js" ></script>
-<script type="text/javascript" src="js/usuario.js" ></script>
+<script type="text/javascript" src="js/formulario.js" ></script>
+<script type="text/javascript" src="js/usuarios.js" ></script>
 <script type="text/javascript" src="js/forms.js" ></script>
 <script type="text/javascript" src="js/toolbar.js" ></script>
 <script>
