alterações na interface do operador

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="http://anima.craos.net:8443/vllibs/public/oauth/oauth.js"></script>
     <script type="text/javascript" src="http://anima.craos.net:8443/vllibs/public/adm/adm.js" ></script>
     <link type="text/css" rel="stylesheet" href="css/app.css">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
 </body>
